Replace isEmpty() checks with isBlank() in many places